--- a/style.css
+++ b/style.css
@@ -1,11 +1,34 @@
-a{
-  color:red;
+body  section{
+  padding-top: 110px;
 }
 
-span{
-  width: 50px;
-  height: 50px;
-  color: green;
+header{background-color: green;
+
+  top: 0;
+  width: 100%;
+  position: fixed;
+}
+header > h1{
+  text-align: center;
+}
+.nav{
+  width: 100%;
+  background-color: #595959;
+  color: #ffffff;
+  list-style: none;;
+  text-align: center;;
+  padding: 20px 0 20px 0;
+}
+.nav > li{
+  display: inline-block;
+  padding-right: 150px;
+}
+.nav > li > a{
+  text-decoration: none;
+  color: #ffffff;
+}
+.nav > li > a:hover{
+  color: #c1c1c1;
 }
 
 .teamFigures {
@@ -16,9 +39,8 @@ span{
 .singleFigure {
 
 }
-@media only screen and (min-width:600px){
+@media only screen and (min-width:480px){
   .teamFigures{
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
-
