Improved the nav bar

--- a/style.css
+++ b/style.css
@@ -21,3 +21,9 @@ span{
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+
+iframe {
+    overflow: scroll;
+    width: 1349px;
+    border: 1px solid black;
+}
