--- a/style.css
+++ b/style.css
@@ -11,14 +11,37 @@ span{
 .teamFigures {
   display: grid;
   grid-template-columns: 1fr;
+  width:100%;
+  background-image: url(https://previews.123rf.com/images/korolyok/korolyok1803/korolyok180300118/98554499-old-grunge-newspaper-paper-texture-background-blurred-vintage-newspaper-background-aged-blur-paper-t.jpg);
 }
 
 .singleFigure {
+  width: 33%
+  background-image: url(http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg);
 
 }
+
+#aboutUs {
+  text-align: center;
+}
+
+.abubg {
+  background-image: url(http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg);
+  height: 200px;
+    width: 100%;
+}
+
 @media only screen and (min-width:600px){
   .teamFigures{
     grid-template-columns: 1fr 1fr 1fr;
   }
-}
 
+  .singleFigure > img{
+    max-width: 100%;
+    max-height: 222px;
+    radios:50px;
+    border: 5px solid grey ;
+  }
+
+
+}
