Added content text, working on form bar

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-body  section{
+body > section{
   padding-top: 110px;
 }
 
-header{background-color: green;
-
+header{
+  background-color: green;
   top: 0;
   width: 100%;
   position: fixed;
@@ -34,43 +34,57 @@ header > h1{
 .teamFigures {
   display: grid;
   grid-template-columns: 1fr;
-  width:100%;
+  max-width:100%;
   background-image: url(https://previews.123rf.com/images/korolyok/korolyok1803/korolyok180300118/98554499-old-grunge-newspaper-paper-texture-background-blurred-vintage-newspaper-background-aged-blur-paper-t.jpg);
-}
-
-.singleFigure {
-  width: 33%
-  background-image: url(http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg);
-
 }
 
 #aboutUs {
   text-align: center;
 }
 
-.abubg {
-  background-image: url(http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg);
-  height: 200px;
-    width: 100%;
-}
-
-  .singleFigure > img{
+figure > img{
     max-width: 100%;
     max-height: 222px;
-    radios:50px;
     border: 5px solid grey ;
   }
 
-
-iframe {
-    overflow: scroll;
-    width: 1349px;
-    border: 1px solid black;
-  }
-
-  @media only screen and (min-width:480px){
-  .teamFigures{
-    grid-template-columns: 1fr 1fr 1fr;
-  }
+  /* Style for form*/
+#contactUs{
+  text-align: left;
+  margin: 0% 2.5% 0% 2.5%;
 }
-
+textarea {
+  width: 100%;
+}
+.pure-group{
+  border: none;
+}
+.content-head {
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin: 2em 0 1em;
+}
+.is-center {
+  text-align: center;
+}
+.button-success {
+  color: white;
+  border-radius: 4px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  background: rgb(28, 184, 65); /* this is a green */
+  margin-bottom: 50px;
+  float: left;
+}
+.button-xlarge {
+  font-size: 125%;
+}
+button {
+  float: right;
+}
+#name, #email {
+  width: 50%;
+}
+@media screen and (min-width:480px){
+  .teamFigures{grid-template-columns: 1fr 1fr 1fr;}
+}
