--- a/style.css
+++ b/style.css
@@ -1,12 +1,23 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik');
 body  section{
   padding-top: 110px;
+  text-align: center;
+  text-justify: inter-word;
+margin: 30px;
 }
+body{
+  background-image: url(https://orig00.deviantart.net/6f50/f/2011/325/d/b/techno_wallpaper_hd_by_gredius-d4guyxr.jpg);
+  background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      font-family: 'Rubik', sans-serif;
 
+}
 header{background-color: green;
 
   top: 0;
   width: 100%;
-  position: fixed;
+  position: fixed;Developers
 }
 header > h1{
   text-align: center;
@@ -30,37 +41,42 @@ header > h1{
 .nav > li > a:hover{
   color: #c1c1c1;
 }
-
+.aboutus {
+  text-align: center;
+  width: 70%;
+margin: auto;
+line-height: 150%;
+font-size: 24px;
+color: lightgray;
+text-align: justify;
+    text-justify: inter-word
+}
 .teamFigures {
   display: grid;
   grid-template-columns: 1fr;
   width:100%;
-  background-image: url(https://previews.123rf.com/images/korolyok/korolyok1803/korolyok180300118/98554499-old-grunge-newspaper-paper-texture-background-blurred-vintage-newspaper-background-aged-blur-paper-t.jpg);
 }
 
-.singleFigure {
-  width: 33%
-  background-image: url(http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg);
 
-}
 
 #aboutUs {
   text-align: center;
 }
 
-.abubg {
-  background-image: url(http://wallpoper.com/images/00/31/33/51/black-background_00313351.jpg);
-  height: 200px;
-    width: 100%;
+.singleFigure > figcaption{
+  text-align: justify;
+  text-justify: inter-word;
+
 }
 
   .singleFigure > img{
     max-width: 100%;
-    max-height: 222px;
-    radios:50px;
+    max-height: 400px;
     border: 5px solid grey ;
   }
-
+h2{
+  text-align: center;
+}
 
 iframe {
     overflow: scroll;
@@ -68,9 +84,8 @@ iframe {
     border: 1px solid black;
   }
 
-  @media only screen and (min-width:480px){
+  @media  screen and (min-width:480px){
   .teamFigures{
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
-
