--- a/style.css
+++ b/style.css
@@ -1,161 +1,197 @@
 
 /*Whole document formating*/
 @import url('https://fonts.googleapis.com/css?family=Rubik');
-body section{
-  padding-top: 100px;
-  text-align: center;
-  text-justify: inter-word;
-  margin: 30px;
-}
+
 body{
+  margin-left: 0px;
+  margin-right: 0px;
   background-image:
   url(http://www.reevolveclothing.com/wp-content/uploads/2018/05/simple-picture-of-camels-in-the-desert-10277d-camel-wallpaper-landscape-pinterest-deserts.jpg);
-  /* url(https://orig00.deviantart.net/6f50/f/2011/325/d/b/techno_wallpaper_hd_by_gredius-d4guyxr.jpg); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   font-family: 'Rubik', sans-serif;
   font-size: 18px;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+body section{
+  padding-top: 50px;
+  padding-bottom: 70px;
+}
+section{
+  /* background-image:
+  url(http://www.reevolveclothing.com/wp-content/uploads/2018/05/simple-picture-of-camels-in-the-desert-10277d-camel-wallpaper-landscape-pinterest-deserts.jpg);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover; */
+}
+h1{
+  text-align: center;
+  padding: 0px;
+  margin:0px;
+  /* background-color:#FFE4B5; */
+  background-color:#a84c0a;
+  font-size: 35px;
+  color:#fffff0;
 }
 h2{
   font-size: 35px;
+  text-align: center;
+  margin: 0px;
+  padding-bottom: 25px;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+  margin: 0px;
 }
 /*Nav bar and header*/
 header{
   top: 0;
   width: 100%;
   position: fixed;
-  padding: 0px;
-  margin:0px;
-  height: auto;
 }
-header > h1{
-  text-align: center;
-  padding: 0px;
-  margin:0px;
-  background-color:#FFE4B5;
-  font-size: 35px;
-}
-.nav{
+
+nav{
   background-color:#CD853F;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   position: fixed;
   bottom:0;
   top: initial;
   width: 100%;
   color: #ffffff;
-  list-style: none;
   text-align: center;
-  padding: 0px ;
+  padding: 0px;
   bottom :0;
-  height: 40px;
+  height: auto;
   margin: 0px;
-  align-items:center;
+  align-items: center;
+  font-size: 20px;
 }
-
-.nav > li{
-  /* display: inline-block;
-  padding-right: 150px;
-  padding-top: 0.2%; */
+nav > a{
+  padding: 3px 0px 3px 0px;
 }
-.nav > li > a{
-  text-decoration: none;
-  color: #ffffff;
-
+nav > a:hover{
+  background-color: #D2691E;
+  border: 1px solid #3a220b;
 }
-.nav > li > a:hover{
-  /* color: #c1c1c1; */
-  background-color: #c1c1c1;
+p{
+  margin:0;
+  padding:0;
 }
 /*About us*/
 .partialGreyBackround{
-  background-color: rgba(220,220,220,0.6);
-  padding: 10px 25px 25px 25px;
+  background-color: rgba(220,220,220,0.75);
+  padding: 2% 2% 2% 2%;
   border: 2px solid #F5F5DC;
+  height: 95%;
 }
 .aboutUsBox{
-  width: 60%;
+  width: 80%;
   margin: auto;
+  height: auto;
 }
-.aboutus {
-  text-align: center;
-  line-height: 150%;
-  color: #000;
-  text-align: justify;
-  text-justify: inter-word
-}
-.teamFigures {
+/*The Team*/
+.teamContainer {
   display: grid;
   grid-template-columns: 1fr;
   width:100%;
 }
-
-#aboutUs {
-  text-align: center;
+.teamContainer > figure{
+  width: 90%;
+  margin:auto;
 }
-
-
-.singleFigure > figcaption{
-  text-align: justify;
-  text-justify: inter-word;
-  font-size: 18px;
+figcaption{
+  font-size: 22px;
+  padding: 4% 4% 4% 4%;
 }
-
- .singleFigure > img{
+.singleFigure > img{
     max-width: 100%;
-    max-height: 400px;
     border: 1px solid #BDB76B ;
+    border-radius: 20%;
   }
-h2{
-  text-align: center;
+.gitLink{
+  float:right;
+  margin-bottom: -15px;
 }
 
 /* Style for form*/
 #contactUs{
-  text-align: left;
-  margin: 0% 2.5% 0% 2.5%;
+  padding-left:2.5%;
+  padding-right:2.5%;
 }
+#gform{
+  height: auto;
+}
+fieldset{
+  padding: 0px;
+  width: 100%;
+  border: none;
+}
+fieldset > input, fieldset > label{
+  width: 100%;
+  vertical-align: middle;
+  display: block;
+}
+
 textarea {
   width: 100%;
 }
-.pure-group{
-  border: none;
-}
-.content-head {
-  font-weight: 400;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  margin: 2em 0 1em;
-}
-.is-center {
-  text-align: center;
-}
-.button-success {
+.button-submit {
   color: white;
-  border-radius: 4px;
+  border-radius: 20px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-  background: rgb(28, 184, 65); /* this is a green */
+  background: rgb(28, 184, 65);
   margin-bottom: 50px;
-  float: left;
-}
-.button-xlarge {
+  margin-top: 20px;
   font-size: 125%;
+  height: 100px;
+  text-align: center;
+  vertical-align: middle;
 }
-button {
-  float: right;
+.button-submit > span{
+  float:right;
+  margin-top: 30px;
 }
-#name, #email {
-  width: 50%;
+.button-submit > img{
+  max-height: 95px;
+}
+#name, #email, #phoneNumber {
+  width: 30%;
+  height: 30px;
 }
 /* Style for Desktop*/
-@media only screen and (min-width:480px){
-.teamFigures{grid-template-columns: 1fr 1fr 1fr;}
-.nav{
+@media only screen and (min-width:600px){
+.teamContainer{grid-template-columns: 1fr 1fr 1fr;}
+nav{
   position: fixed;
   bottom: initial;
+  font-size: 25px;
   }
   body{
     font-size: 25px;
+  }
+  figcaption{
+    font-size: 22px;
+  }
+  .aboutUsBox{
+    width: 60%;
+  }
+  body section{
+    padding-top: 100px;
+  }
+}
+@media only screen and (max-width:375px){
+  body{
+    font-size: 18px;
+  }
+  figcaption{
+    font-size: 18px;
+  }
+  h1{
+    font-size: 30px;
   }
 }
